# obelisk

./: .envrc  .envrc-example  .gitignore  .ignore  AGENTS.md  CHANGELOG.md  Cargo.toml  DEVELOPMENT.md  LICENSE.md  README.md  ROADMAP.md  TODO.md  audit.toml  build-docker.sh  build.rs  deny.toml  dev-deps.txt  download.sh  flake.nix  garnix.yaml  install.sh  obelisk-generate.toml  obelisk-help-deployment.toml  obelisk-help-server.toml  obelisk-help.toml  obelisk-local.toml  obelisk-postgres.toml  obelisk-testing-exec.toml  obelisk-testing-js-local.toml  obelisk-testing-pg-server.toml  obelisk-testing-postgres-local.toml  obelisk-testing-postgres-oci.toml  obelisk-testing-sqlite-local-js.toml  obelisk-testing-sqlite-local.toml  obelisk-testing-sqlite-oci-compat-4.0.0.toml  obelisk-testing-sqlite-oci.toml  obelisk-testing-sqlite-server.toml  obelisk-testing-wasm-local.toml  obelisk-testing-wasm-oci.toml  obelisk.toml  (+7 more)
crates/activities/wasm-email-provider/: Cargo.toml
crates/activities/wasm-email-provider/src/: http.rs  lib.rs
crates/activities/wasm-email-provider/wit/: wasm-email-provider.wit
crates/activity-js-runtime/: Cargo.toml
crates/activity-js-runtime/builder/: Cargo.toml  build.rs
crates/activity-js-runtime/builder/src/: lib.rs
crates/activity-js-runtime/src/: activity_js_runtime.rs  lib.rs  wasi_fetcher.rs  wasi_job_executor.rs
crates/activity-js-runtime/wit/: world.wit
crates/activity-js-runtime/wit/obelisk_js-runtime/: execute.wit
crates/bench/: Cargo.toml
crates/bench/benches/: fibo.rs
crates/boa-common/: Cargo.toml
crates/boa-common/src/: child_error.rs  child_execution_error.rs  console.rs  crypto.rs  esm.rs  helpers.rs  imports.rs  lib.rs  obelisk_env.rs  wasi_fetcher.rs  wasi_job_executor.rs
crates/component-builder/: Cargo.toml
crates/component-builder/src/: lib.rs
crates/concepts/: Cargo.toml
crates/concepts/src/: backtrace.rs  cas.rs  component_id.rs  error_conversions.rs  lib.rs  postgres_ext.rs  rusqlite_ext.rs  storage.rs  time.rs  worker.rs
crates/db/: Cargo.toml
crates/db-common/: Cargo.toml
crates/db-common/src/: combined_state.rs  join_set_fold.rs  join_set_open_tracker.rs  lib.rs  notifiers.rs  state_filter.rs  subscribers.rs
crates/db-mem/: Cargo.toml
crates/db-mem/src/: inmemory_dao.rs  journal.rs
crates/db-postgres/: Cargo.toml
crates/db-postgres/migrations/: V10__bounded_text_columns.sql  V11__backtrace_sources_in_cas.sql  V12__lifecycle.sql  V13__join_set_response_seq.sql  V1__initial.sql  V2__deployment_component_metadata.sql  V3__workflow_auto_locking.sql  V7__deployment_digest.sql  V8__deployment_files.sql
crates/db-postgres/src/: lib.rs  postgres_dao.rs
crates/db-sqlite/: Cargo.toml
crates/db-sqlite/migrations/: V10__bounded_text_columns.sql  V11__backtrace_sources_in_cas.sql  V12__lifecycle.sql  V13__join_set_response_seq.sql  V1__initial.sql  V2__deployment_component_metadata.sql  V3__workflow_auto_locking.sql  V4__deployment_summary_index.sql  V5__log_composite_cursor_index.sql  V6__deployment_description.sql  V8__deployment_files.sql  V9__deployment_toml.sql
crates/db-sqlite/src/: backtrace.rs  histograms.rs  lib.rs  sqlite_dao.rs
crates/db/src/: inmemory_dao.rs  journal.rs  lib.rs  storage.rs
crates/deployment-config/: Cargo.toml
crates/deployment-config/src/: component_id.rs  config.rs  env_var.rs  lib.rs  naming.rs  postgres_ext.rs  rusqlite_ext.rs
crates/executor/: Cargo.toml
crates/executor/src/: executor.rs  expired_lock_watcher.rs  expired_timers_watcher.rs  lib.rs  worker.rs
crates/grpc/: Cargo.toml  build.rs
crates/grpc/src/: grpc_gen.rs  grpc_mapping.rs  lib.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: activity.rs  database.rs  error.rs  event_history.rs  host_activity.rs  lib.rs  main.rs  runtime.rs  wasm_tools.rs  workflow.rs
crates/scheduler/: Cargo.toml
crates/scheduler/src/: executor.rs  lib.rs  memory.rs  scheduler.rs  storage.rs  testing.rs
crates/testing/benches/: Cargo.toml
crates/testing/cargo-component-builder/: Cargo.toml
crates/testing/db-tests/: Cargo.toml
crates/utils/: Cargo.toml
crates/utils/src/: lib.rs  panic_hook.rs  sha256sum.rs  testing_fn_registry.rs  wasi_http.rs  wasm_tools.rs  wit.rs  wit_builder.rs  wit_printer.rs
crates/val-json/: Cargo.toml
crates/val-json/src/: core.rs  deser.rs  lib.rs  type_wrapper.rs  wast_val.rs  wast_val_ser.rs
crates/wasm-workers/: Cargo.toml  wasi
crates/wasm-workers/host-wit/: host-activities.wit
crates/wasm-workers/host-wit-workflow/: dummy.wit
crates/wasm-workers/src/: activity_ctx.rs  activity_worker.rs  auto_worker.rs  cancellation_driver.rs  component_detector.rs  component_logger.rs  engines.rs  epoch_ticker.rs  event_history.rs  host_exports.rs  http_hooks.rs  http_request_policy.rs  http_trigger.rs  js_imports.rs  js_wit_builder.rs  js_worker_utils.rs  lib.rs  log_db_forwarder.rs  policy_builder.rs  preopens_cleaner.rs  registry.rs  std_output_stream.rs  testing_fn_registry.rs  wasi_http.rs  webhook_trigger.rs  workflow_ctx.rs  workflow_worker.rs
crates/webhook-js-runtime/: Cargo.toml
crates/webhook-js-runtime/builder/: Cargo.toml  build.rs
crates/webhook-js-runtime/src/: console.rs  lib.rs  webhook_js_runtime.rs
crates/webhook-js-runtime/wit/: world.wit
crates/webui/: .gitignore  Cargo.toml  README.md  Trunk-dev.toml  Trunk.toml  build.rs  index.html  styles.css
crates/webui-proxy/: Building.md  Cargo.toml  README.md  build.rs
crates/webui-proxy/src/: bindings.rs  lib.rs
crates/webui-proxy/wit/: impl.wit
crates/webui/builder/: Cargo.toml  build.rs
crates/webui/src/: app.rs  component_list.rs  ffqn.rs  grpc_client.rs  lib.rs  main.rs
crates/workflow-js-runtime/: Cargo.toml
crates/workflow-js-runtime/builder/: Cargo.toml  build.rs
crates/workflow-js-runtime/src/: deterministic_executor.rs  lib.rs  workflow_js_runtime.rs
crates/workflow-js-runtime/wit/: world.wit
hello-world/: Cargo.toml
hello-world/src/: lib.rs
hello-world/wit/: hello-world.wit
runtime/: Cargo.toml  wit
runtime/src/: activity.rs  main.rs  workflow.rs
(+941 files in other folders)
