[package]
name = "hello-world"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo-component-bindings = "0.4.1"

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "component:hello-world"

[package.metadata.component.dependencies]
