[package]
name = "runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.75", features = ["backtrace"] }
async-trait = "0.1"
thiserror = "1.0"
tokio = { version = "1.34", features = ["full"] }
wasmtime = { version = "14.0", features = ["component-model"] }
wasmtime-wasi-http = "14.0"
wasmtime-wasi = "14.0"
