[package]
name = "activity-js-runtime"
authors.workspace = true
edition.workspace = true
license.workspace = true
publish = false
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
boa-common.workspace = true
boa_engine.workspace = true
boa_gc.workspace = true
boa_runtime.workspace = true
futures-concurrency.workspace = true
futures-lite = "2.6.1"
http.workspace = true
serde_json.workspace = true
tracing.workspace = true
wit-bindgen.workspace = true
wstd.workspace = true

[build-dependencies]
anyhow.workspace = true
wit-bindgen-rust.workspace = true

[lib]
crate-type = ["cdylib"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(getrandom_backend, values("custom"))'] }
